--- a/index.html
+++ b/index.html
@@ -1,47 +1,81 @@
-<!doctype html>
-<html>
-<head>
-<meta charset="utf-8">
-<title>St. Lawerance Seaway</title>
-<link rel="stylesheet" href="css/styles.css">
-	</head>
+<!DOCTYPE html>
+		<html lang="en">
+		<head>
+			<title>JWC: Home</title>
+			<link rel="stylesheet" href="css/styles.css">
+			<meta charset="utf-8">
+		</head>
+		<body>
+			&nbsp;
 
-<body class="site">
-	<header>
-		<a href="index.html"></a>
-		<nav>
-			<p><a href="index.html">Home</a> &nbsp; &#9475; &nbsp;
-			<a href="locks.html">Locks</a> &nbsp; &#9475; &nbsp;
-			<a href="ecology.html">Ecology</a> &nbsp; &#9475; &nbsp;
-			<a href="history.html">History</a> &nbsp; &#9475; &nbsp;
-			<a href="newsletter.html">Newsletter</a></p>
-		</nav>
-	<h1>St.Lawrence Seaway</h1>
-	</header>
-	<main>
-		<h2><b>Seaway</b></h2>
-	<article>
-		<p><img src="images/home.jpg" alt="index pic" width="50%" height="50%">The Saint Lawrence Seaway (French: la Voie Maritime du Saint-Laurent) is a system of locks, canals, and channels in Canada and the United States that permits oceangoing vessels to travel from the Atlantic Ocean to the Great Lakes of North America, as far inland as Duluth, Minnesota, at the western end of Lake Superior. The seaway is named for the Saint Lawrence River, which flows from Lake Ontario to the Atlantic Ocean. Legally, the seaway extends from Montreal, Quebec, to Lake Erie, and includes the Welland Canal.</p>
+			<div id="wrapper">
 
-		<p>The Saint Lawrence River portion of the seaway is not a continuous canal; rather, it consists of several stretches of navigable channels within the river, a number of locks, and canals along the banks of the Saint Lawrence River to bypass several rapids and dams. A number of the locks are managed by the St. Lawrence Seaway Management Corporation in Canada, and others in the United States by the Saint Lawrence Seaway Development Corporation; the two bodies together advertise the seaway as part of "Highway H2O". The section of the river from Montreal to the Atlantic is under Canadian jurisdiction, regulated by the offices of Transport Canada in the Port of Quebec.</p>
-		
-	</article>
-	<aside>
-		
-			 
-	</aside>
-	</main>
-		<footer>
-			<nav>
-			<p><a href="index.html">Home</a> &nbsp; &#9475; &nbsp;
-			<a href="locks.html">Locks</a> &nbsp; &#9475; &nbsp;
-			<a href="ecology.html">Ecology</a> &nbsp; &#9475; &nbsp;
-			<a href="history.html">History</a> &nbsp; &#9475; &nbsp;
-			<a href="newsletter.html">Newsletter</a></p>
-		</nav>
-		
-			<p>&copy; 2023 Seaway Software Developers </p>
-			<p>Last update: 3/8/23</p>
-		</footer>
-</body>
-</html>
+				<!-- Mobile Nav -->
+				<nav class="mobile-nav">
+					<div id="nav-links">
+						<ul>
+               			<a href="index.html">Home</a>
+						<a href="about.html">About Me</a> 
+			   			<a href="prices.html">Prices</a>
+						<a href="products.html">Products</a> 
+						<a href="contact.html">Contact</a>
+            </ul>
+					</div>
+					<a class="nav-icon" onclick="menu()">
+						<div id="icon">&#9776;</div>
+					</a>
+				</nav> 
+
+				<header>
+					<div class="tab-desk">
+					  <a href="index.html"><img src="images/jwc1.jpg" alt="JWC logo"  class="center"></a>
+					</div>
+				</header>
+
+				<nav class="tab-desk">
+					<ul>
+					<ul>
+               			<li><a href="index.html">Home</a></li>  
+						<li><a href="about.html">About Me</a></li>  
+			   			<li><a href="prices.html">Prices</a></li>
+						<li><a href="products.html">Products</a></li> 
+						<li><a href="contact.html">Contact</a></li>
+            </ul>
+					</ul>
+				</nav>
+
+				<!-- Use the main area to add the main content to the webpage -->
+				<main id="content">
+				   <div id="welcome">
+
+					  <p>Welcome to JWC. </p>
+
+					  <p>My name is Josh Jarvis, I have a wood working busniness where my dad and I create all types of projects.</p>
+
+					  <p>I hope that one day my busniness can be big and I can share my product with the world.</p>
+
+					</div>
+
+					<div id="latest">
+
+						<h2></h2>
+						<img src="images/josh.png" alt="Josh" class="round">
+						<p>I started my business at a young age in hopes to make a little extra money and I have stuck with it because I really enjoy working with wood and making these projects.</p>
+
+					</div>
+
+				</main>
+
+				<footer>
+					<div class="copyright">
+						<p>&copy; Copyright 2023. All Rights Reserved.</p>
+						<p><a href="mailto:josh@woodworking.org">josh@woodworking.org</a></p>
+					</div>
+					<div class="social">
+						<a href="https://www.facebook.com/joshuaswoodworkingcreations" target="_blank"><img src="images /facebook-logo.png" alt="Facebook logo"></a>
+					</div>
+				</footer>
+
+			</div>
+		</body>
+		</html>
